<resources>
    <string name="app_name">sraum</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="sraum">sraum</string>
    <string name="user">手机号/用户名</string>
    <string name="password">密码</string>
    <string name="forget">忘记密码</string>
    <string name="register">登录</string>
    <string name="enter">注册</string>
    <string name="bottom">Copyright © 苏州众天力信息科技有限公司</string>
    <string name="famname">输入家人称呼</string>
    <string name="famphone">输入家人手机号</string>
    <string name="phone">输入手机号</string>
    <string name="checkcode">输入验证码</string>
    <string name="passord">输入密码</string>
    <string name="confirm">再次输入密码</string>
    <string name="read">我已阅读并同意</string>
    <string name="readafter">《sraum注册协议》</string>
    <string name="complete">完成注册</string>
    <string name="getcode">获取验证码</string>
    <string name="mac">智能设备</string>
    <string name="room">房间</string>
    <string name="scene">场景</string>
    <string name="nomac">暂无智能设备</string>
    <string name="noroom">暂无房间</string>
    <string name="noscene">暂无场景</string>
    <string name="add">我要添加</string>
    <string name="light">灯光</string>
    <string name="air">空调</string>
    <string name="curtain">窗帘</string>
    <string name="one">首页</string>
    <string name="two">我的网关</string>
    <string name="three">智能设备</string>
    <string name="four">我的房间</string>
    <string name="five">我的场景</string>
    <string name="six">设置</string>
    <string name="seven">关于</string>
    <string name="eight">退出</string>
    <string name="porchlight">走廊灯</string>
    <string name="num">16</string>
    <string name="temp">注：单位为摄氏度</string>
    <string name="daddmac">添加智能设备</string>
    <string name="daddscene">添加场景</string>
    <string name="daddroom">添加房间</string>
    <string name="mygate">我的网关</string>
    <string name="ad">我要添加</string>
    <string name="gosearch">继续搜索</string>
    <string name="details">查看详情</string>
    <string name="stopsearch">停止搜索</string>
    <string name="nosearch">未搜索到局域网</string>
    <string name="gateone">您的局域网未发现Massky</string>
    <string name="gatetwo">®</string>
    <string name="gatethree">网关</string>
    <string name="gatefour">您可以按以下方法来解决问题:</string>
    <string name="gatefive">1.请检查网关设备是否通电;</string>
    <string name="gatesix">2.网关设备与手机必须在同一个局域网</string>
    <string name="gateseven">3.网关设备故障灯是否闪烁</string>
    <string name="gateight">4.如未发现以上问题,请致电40012345678</string>
    <string name="gatewone">网关详细信息</string>
    <string name="gatewtwo">网关ID</string>
    <string name="gatewthree">8928548789798</string>
    <string name="gatewfour">型号</string>
    <string name="gatewfive">w_06968</string>
    <string name="gatewsix">固件版本</string>
    <string name="gatewseven">V1.1.33</string>
    <string name="gateweight">硬件版本</string>
    <string name="gatewnine">V1.0</string>
    <string name="gatewten">自定名称</string>
    <string name="scenecen">我的场景</string>
    <string name="sceneone">回家</string>
    <string name="scenetwo">睡眠</string>
    <string name="scenethree">夜起</string>
    <string name="scenefour">离家</string>
    <string name="scenefive">休息</string>
    <string name="scenesix">学习</string>
    <string name="sceneseven">影音</string>
    <string name="sceneight">会客</string>
    <string name="scenenine">用餐</string>
    <string name="sceneten">运动</string>
    <string name="sceneleven">晨起</string>
    <string name="scenetwle">全开</string>
    <string name="scenethirteen">全关</string>
    <string name="function">功能选项</string>
    <string name="rename">重命名</string>
    <string name="editesce">编辑场景</string>
    <string name="deletesce">删除场景</string>
    <string name="associated">关联面板</string>
    <string name="myroom">我的房间</string>
    <string name="bedroom">卧室</string>
    <string name="fresh">下拉刷新</string>
    <string name="rone">卧室</string>
    <string name="rtwo">厨房</string>
    <string name="rthree">卫生间</string>
    <string name="rfour">客厅</string>
    <string name="rfive">餐厅</string>
    <string name="rsix">阳台</string>
    <string name="rseven">门厅</string>
    <string name="reight">儿童房</string>
    <string name="rnine">书房</string>
    <string name="rten">车库</string>
    <string name="relcven">化妆间</string>
    <string name="rtwle">娱乐室</string>
    <string name="rthirteen">健身区</string>
    <string name="rmone">卧室调光灯</string>
    <string name="rmtwo">客厅灯</string>
    <string name="rmthree">卧室空调</string>
    <string name="rmfour">卧室窗帘</string>
    <string name="rmfive">卫浴灯</string>
    <string name="rmsix">卫浴灯</string>
    <string name="rmseven">客厅空调</string>
    <string name="rmeight">厨房灯</string>
    <string name="rmnine">客厅窗帘</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="camera">相机</string>
    <string name="photoalbum">从相册选取图片</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
</resources>