<?xml version="1.0" encoding="utf-8"?>
<!--局域网详情页面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/backtitle" />
    <TextView
        android:id="@+id/gatetext_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateone"
        android:layout_marginTop="@dimen/p159"
        android:layout_marginLeft="@dimen/p100"
        android:textSize="@dimen/p30"
        android:textColor="@color/e30"/>
    <TextView
        android:id="@+id/gatetwotext_id"
        android:layout_toRightOf="@+id/gatetext_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150px"
        android:textColor="@color/e30"
        android:text="@string/gatetwo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/p159"
        android:layout_marginLeft="@dimen/p3"
        android:textColor="@color/e30"
        android:text="@string/gatethree"
        android:layout_toRightOf="@+id/gatetwotext_id"/>
    <TextView
        android:id="@+id/gatefour_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gatefour"
        android:layout_marginLeft="@dimen/p100"
        android:layout_below="@+id/gatetext_id"
        android:layout_marginTop="@dimen/p82"
        android:textSize="@dimen/p30"
        android:textColor="@color/e30"/>
    <TextView
        android:id="@+id/gatefive_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gatefive"
        android:layout_marginLeft="@dimen/p100"
        android:layout_below="@+id/gatefour_id"
        android:layout_marginTop="@dimen/p31"
        android:textSize="@dimen/p24"
        android:textColor="@color/e30"/>
    <TextView
        android:id="@+id/gatesix_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gatesix"
        android:layout_marginLeft="@dimen/p100"
        android:layout_below="@+id/gatefive_id"
        android:layout_marginTop="@dimen/p31"
        android:textSize="@dimen/p24"
        android:textColor="@color/e30"/>
    <TextView
        android:id="@+id/gateseven_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateseven"
        android:layout_marginLeft="@dimen/p100"
        android:layout_below="@+id/gatesix_id"
        android:layout_marginTop="@dimen/p31"
        android:textSize="@dimen/p24"
        android:textColor="@color/e30"/>
    <TextView
        android:id="@+id/gateight_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateight"
        android:layout_marginLeft="@dimen/p100"
        android:layout_below="@+id/gateseven_id"
        android:layout_marginTop="@dimen/p31"
        android:textSize="@dimen/p24"
        android:textColor="@color/e30"/>

</RelativeLayout>